--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -63,15 +63,15 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	\label{fig:EntriJadwalDosen} 
 \end{figure}
 
-Fitur ini terdapat pada halaman \texttt{EntriJadwalDosen} yang dapat digunakan untuk memasukan atau merubah jadwal dosen. Dapat dilihat pada gambar \ref{fig:EntriJadwalDosen} terdapat sebuah fitur untuk melakukan \textit{expor ke xls}. Dari laporan pengguna, fitur tersebut akan menghasilkan file \texttt{.xls} \textit{corrupt}.
+Fitur ini terdapat pada halaman \texttt{EntriJadwalDosen} yang dapat digunakan untuk memasukan atau mengubah jadwal dosen. Dapat dilihat pada gambar \ref{fig:EntriJadwalDosen} terdapat sebuah fitur untuk melakukan \textit{expor ke xls}. Dari laporan pengguna, fitur tersebut akan menghasilkan file \texttt{.xls} \textit{corrupt}.
 
 Fitur tersebut akan dikerjakan. Tetapi \textit{error} file \textit{corrupt} tidak dapat direproduksi. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/1}. 
 
 \subsection{\textit{Update google api/phpspreadsheet}}
 \label{issue:2}
-\textit{Bluetape} saat ini menggunakan \textit{google/apiclient} 1.0 dan \textit{phpexcel}. Salah satu permintaan dari pengguna/pengurus \textit{bluetape} untuk merubah \textit{google/apiclient} 1.0 menjadi \textit{google/apiclient} 2.4.0 dan \textit{phpexcel} menjadi \textit{phpspreadsheet} v1.11.0. 
+\textit{Bluetape} saat ini menggunakan \textit{google/apiclient} 1.0 dan \textit{phpexcel}. Salah satu permintaan dari pengguna/pengurus \textit{bluetape} untuk mengubah \textit{google/apiclient} 1.0 menjadi \textit{google/apiclient} 2.4.0 dan \textit{phpexcel} menjadi \textit{phpspreadsheet} v1.11.0. 
 
-Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini adalah merubah isi \texttt{composer.json} dan melakukan \texttt{composer update}.
+Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini adalah mengubah isi \texttt{composer.json} dan melakukan \texttt{composer update}.
 \begin{lstlisting}
 "require": {
 	"google/apiclient": "^2.4.0",
@@ -96,34 +96,58 @@ Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunak
 \label{issue:5}
 Mahasiswa dengan format NPM baru seperti: 2017730016 dan awalan 618 dapat \textit{login} tetapi tidak dapat melihat halaman \texttt{LihatJadwalDosen}. 
 
-Masukan ini akan diimplementasi, adapun solusi yang ditawarkan adalah merubah {peng\-a\-turan} hak akses pada \texttt{config/modules.php}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/5} 
+Masukan ini akan diimplementasi, adapun solusi yang ditawarkan adalah mengubah {peng\-a\-turan} hak akses pada \texttt{config/modules.php}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/5}. 
 
 \subsection{Kolom pada EntriJadwalDosen dan LihatJadwalDosen Tidak Seragam}
 \label{issue:6} 
 Pada halaman \texttt{EntriJadwalDosen} dan \texttt{LihatJadwalDosen} terdapat tabel seperti pada gambar \ref{fig:EntriJadwalDosen}. Ukuran tabel tersebut dapat berubah sesuai dengan ukuran tulisan di dalamnya sehingga kolom dengan tulisan yang banyak tidak seragam dengan kolom yang tulisannya sedikit.
 
-Fitur ini akan diimplementasi. Solusi yang ditawarkan adalah dengan memasang \textit{fixed width} pada setiap kolom. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/6} 
+Fitur ini akan diimplementasi. Solusi yang ditawarkan adalah dengan memasang \textit{fixed width} pada setiap kolom. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/6}. 
 
-\subsection{Fungsi tab pada LihatJadwalDosen tidak Berfungsi}
+\subsection{Fungsi tab pada Lihat Jadwal Dosen tidak Berfungsi}
 \label{issue:7}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.7]{lihatjadwaldosentab} 
+	\caption{Antarmuka halaman \texttt{LihatJadwalDosen}}
+	\label{fig:tablihatjadwaldosen} 
+\end{figure}
+
+\textit{Feedback} dari pengguna adalah dalam halaman \texttt{LihatJadwalDosen} fungsi \textit{tab} tidak berfungsi semestinya. Fungsi \textit{tab} \texttt{LihatJadwalDosen} menggunakan \textit{bootstrap}, pada gambar \ref{fig:tablihatjadwaldosen} seharusnya tidak menampilkan semua isi dari jadwal dosen, melainkan hanya menampilkan jadwal dosen yang aktif.
+
+Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan mengubah struktur \textit{nav-tab} sesuai struktur yang diberikan oleh \textit{bootstrap}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/7}.
+
 \subsection{Pengelompokkan Rekap Perubahan Jadwal pada Mata Kuliah yang Sama}
 \label{issue:8}
 \subsection{Menyediakan Forum Q\&A pada \textit{Bluetape}}
 \label{issue:9}
-Masukan pengguna meminta \textit{bluetape} menyediakan tempat forum untuk bertanya antar mahasiswa dan pihak tata usaha. \textit{Feedback} dari pengguna: ``Pada masa daring saat ini ketika semua informasi disampaikan melalui media digital, mahasiswa banyak kontak via email dan akhirnya menumpuk''.  Pengguna meminta untuk dibuat portal kecil untuk \textit{Q\&A} dalam ranah akademik.
+Masukan pengguna meminta \textit{bluetape} menyediakan tempat forum untuk bertanya antar mahasiswa dan pihak tata usaha. \textit{Feedback} dari pengguna: ``Pada masa daring saat ini ketika semua informasi disampaikan melalui media digital, mahasiswa banyak kontak via email dan akhirnya menumpuk''.  Pengguna meminta untuk dibuat portal kecil untuk \textit{Q}\&\textit{A} dalam ranah akademik.
 
-Masukan ini tidak akan diimplementasi pada skripsi ini, karena untuk forum sebaiknya menggunakan aplikasi pihak ketiga yang sudah matang dibanding membuat dari nol. Seperti: \textit{Microsoft Teams}\footnote{\url{https://www.microsoft.com/microsoft-365/microsoft-teams}},\textit{Slack}\footnote{\url{https://slack.com}} atau \textit{monday.com}\footnote{\url{https://monday.com/}}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/9} 
+Masukan ini tidak akan diimplementasi pada skripsi ini, karena untuk forum sebaiknya menggunakan aplikasi pihak ketiga yang sudah matang dibanding membuat dari nol. Seperti: \textit{Microsoft Teams}\footnote{\url{https://www.microsoft.com/microsoft-365/microsoft-teams}},\textit{Slack}\footnote{\url{https://slack.com}} atau \textit{monday.com}\footnote{\url{https://monday.com/}}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/9}. 
 
 \subsection{\textit{Scheduling} Matakuliah pada \textit{googlemeet/zoom}}
 \label{issue:10}
-\textit{Issue} ini meminta agar \textit{bluetape} melakukan \textit{auto include} jadwal kuliah ke calendar, lalu \textit{autocreate} jadwal kuliah berdasarkan jadwal tersebut di \textit{zoom/meet} selama 1 semester, dan \textit{Request} jadwal bertemu dari mahasiswa kepada dosen pembimbing, kemudian \textit{auto schedule zoom/meet}.
+\textit{Issue} ini meminta agar \textit{bluetape} melakukan \textit{auto include} jadwal kuliah ke calendar, lalu {autocreate} jadwal kuliah berdasarkan jadwal tersebut di \textit{zoom/meet} selama 1 semester, dan \textit{Request} jadwal bertemu dari mahasiswa kepada dosen pembimbing, kemudian \textit{auto schedule zoom/meet}.
 
-Fitur ini tidak akan diimplementasi pada skripsi ini, karena permintaan tersebut masuk ke dalam ranah Biro Teknologi Informasi (BTI) dan saat ini \textit{bluetape} tidak memiliki kemampuan untuk integrasi jadwal kuliah dari BTI. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/10} 
+Fitur ini tidak akan diimplementasi pada skripsi ini, karena permintaan tersebut masuk ke dalam ranah Biro Teknologi Informasi (BTI) dan saat ini \textit{bluetape} tidak memiliki kemampuan untuk integrasi jadwal kuliah dari BTI. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/10}. 
 
 \subsection{Mengubah atau Membatalkan Permohonan}
 \label{issue:11}
+Pada halaman cetak transkrip dan halaman  perubahan kuliah pengguna dapat mengajukan permohonan. Salah satu mahasiswa dan dosen menyampaikan \textit{feedback} yaitu:
+\begin{itemize}
+	\item Mahasiswa dapat mengubah atau membatalkan permohonan transkrip. 
+	\item Dosen dapat mengubah atau membatalkan permohonan perubahan kuliah.
+\end{itemize}
+Karena fitur ini mirip maka dijadikan menjadi satu \textit{issue}. 
+
+Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan \texttt{modal} dari \textit{bootstrap} dan menambahkan \textit{method} pada \textit{controller} untuk mengubah dan menghapus dengan syarat bahwa permohonan tersebut belum dijawab. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/11}.
+
 \subsection{Menambahkan Jam Kuliah Selesai di Perubahan Kelas}
 \label{issue:12}
+Pengguna menyampaikan \textit{feedback} agar pada halaman perubahan kuliah, dosen dapat menambahkan opsi jam selesai dari kuliah.
+
+\textit{Feedback} ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menambah satu kolom \textit{text input} untuk menerima jam selesai dalam format \texttt{hh:mm} dan kolom tersebut bersifat opsional untuk diisi oleh dosen. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/12}.
 
 \subsection{Memperbaiki \textit{Form} dan \textit{Link} yang Tidak Aktif}
 \label{issue:13}
@@ -134,27 +158,29 @@ Masukan ini meminta perbaikan terhadap fitur yang ada:
 	\item Dibuat lebih interaktif seperti peminjaman ruang.
 \end{itemize}   
 
-Masukan ini tidak akan diimplementasi, karena sepertinya fitur tersebut di luar sistem \textit{bluetape}. Seperti no surat, daftar ruang, dan peraturan tidak terdapat pada \textit{bluetape}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/13} 
+Masukan ini tidak akan diimplementasi, karena sepertinya fitur tersebut di luar sistem \textit{bluetape}. Seperti no surat, daftar ruang, dan peraturan tidak terdapat pada \textit{bluetape}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/13}. 
 
 \subsection{Mengintegrasi \textit{Bluetape} dengan SSO UNPAR}
 \label{issue:14}
 Masukan ini meminta fitur tambahan agar \textit{bluetape} terintegrasi secara penuh dengan \textit{studentportal}\footnote{\url{https://studentportal.unpar.ac.id/}}. Sehingga \textit{bluetape} dapat diakses lewat \textit{studentportal} dan \textit{bluetape} dapat \textit{login} menggunakan SSO.
 
-Fitur masukan ini tidak akan diimplementasi karena diperlukan koordinasi yang kuat dengan BTI dan \textit{Bluetape} untuk sekarang ini tidak diperuntukan untuk pengguna diluar FTIS. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/14} 
+Fitur masukan ini tidak akan diimplementasi karena diperlukan koordinasi yang kuat dengan BTI dan \textit{Bluetape} untuk sekarang ini tidak diperuntukan untuk pengguna diluar FTIS. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/14}. 
 
 \subsection{Menambah \textit{List} Permintaan pada \textit{Bluetape}}
 \label{issue:15}
-Masukan ini meminta agar \textit{bluetape} menambah \textit{list} permintaan. Masukan ini tidak dikerjakan karena pengguna tersebut kurang spesifik dalam menjelaskan kebutuhannya. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/15} 
+Masukan ini meminta agar \textit{bluetape} menambah \textit{list} permintaan. Masukan ini tidak dikerjakan karena pengguna tersebut kurang spesifik dalam menjelaskan kebutuhannya. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/15}. 
 
 \subsection{Pengajuan Surat Keterangan Aktif Kuliah Secara Online}
 \label{issue:16}
 Fitur tambahan ini meminta agar \textit{bluetape} dapat melayani pengajuan surat keterangan aktif kuliah. Karena untuk mendapatkan surat keterangan aktif kuliah masih dilakukan secara manual.
 
-Fitur ini tidak akan diimplementasi pada skripsi ini dikarenakan waktu yang terbatas, fitur yang cukup banyak, dan juga harus koordinasi intensif dengan tata usaha dan kepala sub bagian kemahasiswaan. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/16} 
+Fitur ini tidak akan diimplementasi pada skripsi ini dikarenakan waktu yang terbatas, fitur yang cukup banyak, dan juga harus koordinasi intensif dengan tata usaha dan kepala sub bagian kemahasiswaan. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/16}.
 
 \subsection{Notifikasi E-mail Terhadap Mahasiswa saat Permintaan Selesai}
 \label{issue:17}
 Fitur tambahan ini meminta saat proses pengajuan telah dijawab atau ditolak oleh tata usaha, maka mahasiswa mendapatkan notifikasi e-mail.
+
+Fitur ini tidak diimplementasi karena \textit{bluetape} telah memiliki fitur ini. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/17}.
  
 
 \subsection{Dapat Melihat Profil Mahasiswa}
@@ -162,7 +188,7 @@ Fitur tambahan ini meminta saat proses pengajuan telah dijawab atau ditolak oleh
 \label{issue:18}
 Salah satu masukan dari \textit{bluetape} adalah menginginkan seorang mahasiswa dapat melihat profil mahasiswa lain.
 
-Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bluetape} tidak terintegrasi dengan \textit{student/lecturer} portal. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/18} 
+Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bluetape} tidak terintegrasi dengan \textit{student/lecturer} portal. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/18}. 
 
 \subsection{Halaman Histori dan Request Transkrip Terpisah}
 \label{issue:19}
@@ -170,15 +196,35 @@ Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bl
 \label{issue:20}
 Permintaan dari pengguna adalah fitur bahasa Indonesia dan bahasa Inggris. Setelah ditanyakan kejelasan dari permintaan ini, yang dimaksudkan pengguna adalah ``Jika dibutuhkan untuk transkrip nilai dalam bahasa Inggris, dulu ada pilihannya tetapi hasil transkrip tetap bahasa Indonesia''.
 
-Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris yang awal diminta untuk dihapus oleh tata usaha. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/20} 
-\subsection{Pagination tidak Ter-\textit{style} dengan baik}
+Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris yang awal diminta untuk dihapus oleh tata usaha. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/20}. 
+\subsection{Pagination tidak Ter-\textit{style} dengan Baik}
 \label{issue:22}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{paginationnotworking} 
+	\caption{Antarmuka \textit{pagination} pada halaman manajemen cetak transkrip}
+	\label{fig:paginationmanajemencetaktranskrip}
+\end{figure}
+Dapat dilihat pada gambar \ref{fig:paginationmanajemencetaktranskrip} \textit{bootstrap pagination} tidak ter-\textit{style} dengan baik. \textit{Feedback} dari pengguna adalah untuk memperbaiki \textit{pagination} tersebut dengan \textit{bootstrap pagination}.
+
+Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan struktur \textit{bootstrap pagination}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/22}. 
+
 \subsection{Format Datetimepicker tidak Konsisten}
 \label{issue:23}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.42]{datetimepicker} 
+	\caption{Antarmuka pada halaman perubahan kuliah}
+	\label{fig:formatdatetimepicker}
+\end{figure}
+
+Halaman perubahan kuliah menggunakan \textit{datetimepicker}\footnote{\url{https://github.com/xdan/datetimepicker}}. Pengguna menyampaikan \textit{feedback} jika format \textit{datetimepicker} tidak konsisten. Dapat dilihat pada gambar \ref{fig:formatdatetimepicker} kolom dari hari \& jam memiliki format \texttt{YYYY/MM/DD hh:mm}. Sedangkan kolom menjadi hari \& jam memiliki format \texttt{YYYY-MM-DD hh:mm}.
+
+Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan merubah format dari hari \& jam menjadi \texttt{YYYY-MM-DD hh:mm}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/23}.
 
 \section{Bluetape}
 
-\textit{Bluetape} adalah aplikasi + framework untuk membuat urusan-urusan paper-based di FTIS UNPAR menjadi paperless.\footnote{\url{https://github.com/ftisunpar/BlueTape}}
+\textit{Bluetape} adalah aplikasi + \textit{framework} untuk membuat urusan-urusan paper-based di FTIS UNPAR menjadi paperless.\footnote{\url{https://github.com/ftisunpar/BlueTape}}
 
 \subsection{Instalasi}
 
